feat: 引入 PGVector 實現 MCP 工具與技能的向量化搜索
Co-authored-by: aider (openai/gcli-gemini-3-pro-preview) <aider@aider.chat>